# powermonitor

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  INA228.cpp  INA228.hpp  INA228.py  README.md  TESTING.md  Untitled Sketch.fzz  inna228_probe.cpp  package-lock.json  package.json  powermonitor.cpp  prototype.fzz  test.ps1  test.sh  time_sync_documentation.md  timesync.py  tsconfig.json  workflow.ps1  workflow_output.txt
.claude/: settings.local.json
.claude/agents/: code-reviewer.md
.claude/worktrees/friendly-chatelet/: .editorconfig  CLAUDE.md  CMakeLists.txt  README.md  TESTING.md  workflow.ps1
.claude/worktrees/friendly-chatelet/asio_serial_demo/: CMakeLists.txt  main.cpp
.claude/worktrees/frosty-stonebraker/: .gitignore  AGENTS.md  CMakeSettings.json  README.md  repro_crc  tsconfig.json
.claude/worktrees/relaxed-jackson/: CLAUDE.md  TESTING.md  Untitled Sketch.fzz  package-lock.json  workflow.ps1
.github/Guidelines/: Building.md  CodingStyle.md  ProtocolRules.md  SimulationGuide.md
.github/TaskLogs/: Code_Quality_Fix_Plan.md  Task_Investigate.md
.github/prompts/: ask.prompt.md  code.prompt.md  design.prompt.md  investigate.prompt.md  review.prompt.md  verify.prompt.md
.github/workflows/: ci.yml  workflow.yml
.jules/: bolt.md
asio_serial_demo/: CMakeLists.txt  main.cpp
benchmarks/: cpu_affinity_benchmark.cpp
device/: CMakeLists.txt  INA228.cpp  INA228.hpp  README.md  command_handler.cpp  command_handler.hpp  hardware_tests.cpp  hardware_tests.hpp  i2c.pio  inna228_probe.cpp  pio_i2c.c  pio_i2c.h  powermonitor.cpp  sampler.cpp  sampler.hpp  state_machine.hpp  time_sync.cpp  time_sync.hpp  timesync_test.cpp
device/core/: fake_data.hpp  raw_sample.hpp  shared_context.hpp  spsc_queue.hpp
device/misc/: INA228.py
device/protocol/: crc16.hpp  frame_builder.hpp  frame_defs.hpp  parser.hpp
device/tests/: CMakeLists.txt  test_command_handler.cpp  test_ina228.cpp  test_sampler.cpp  test_sampler_decimation.cpp
device/tests/mocks/: INA228.hpp  mock_ina228.hpp
device/tests/mocks/hardware/: i2c.h  sync.h  timer.h
device/tests/mocks/ina228_mock/: INA228.hpp
device/tests/mocks/pico/: multicore.h  stdlib.h
docs/: INA228_uart_protocol.md  affinity_quickstart.md  affinity_test_guide.md  cpu_affinity_design.md  naming_convention.md  parser_design.md  pc_client.md  pc_client_implementation_plan.md  pc_simulator_tests.md  state_machine_tests.md
docs/device/: INA228.md  architecture.md  pio_dma_architecture.md  pio_dma_debugging_postmortem.md  pio_dma_wrong_values.md  state_machine.md  time_sync.md
docs/pc_client/: device_serial_tests.md  implementation_plan.md  jetson_nano_dual_source_capture.md  onboard_sampler_design.md  overview.md  power_bundle_schema.md  time_sync_demo.md  usb_packet_loss_investigation.md
docs/pc_sim/: simulator_tests.md  state_machine_tests.md
docs/protocol/: parser_design.md  uart_protocol.md
docs/superpowers/plans/: 2026-05-04-shm-power-spsc-refactoring.md
docs/superpowers/specs/: 2026-05-04-shm-power-spsc-refactoring-design.md
jetson_freq_reader/: jetson_freq_reader.c
node/: benchmark_append.cpp  device_node.cpp  device_node.h  ina228_model.cpp  ina228_model.h  pc_node.cpp  pc_node.h
onboard_power_sampler/: README.md  onboard_power_sampler.cpp
pc_client/: CMakeLists.txt
pc_client/include/: onboard_sample_queue.h  onboard_sampler.h  power_monitor_session.h  protocol_helpers.h  read_thread.h  realtime_power_metrics.h  response_queue.h  sample_queue.h  session.h  shm_power_ring_buffer.h  thread_affinity.h
pc_client/include/serial/: serial.h
pc_client/src/: main.cpp  onboard_sample_queue.cpp  onboard_sampler.cpp  power_monitor_session.cpp  read_thread.cpp  response_queue.cpp  sample_queue.cpp  session.cpp  thread_affinity.cpp  time_sync_demo.cpp
pc_client/src/serial/: serial.cpp
pc_client/tests/: device_serial_tests.cpp  session_merge_tests.cpp  shm_spsc_test.cpp
pc_client/web_viewer/: app.js  index.html  styles.css
pc_sim/: CMakeLists.txt  event_loop_test.cpp  functional_test.cpp  ina228_model_test.cpp  main.cpp  pc_sim_main.cpp  state_machine_test.cpp  time_sync_demo.cpp  unpack_test.cpp
plans/: time_sync_t2t3_fix.md
protocol/: CMakeLists.txt  crc16_ccitt_false.cpp  crc16_ccitt_false.h  frame_builder.cpp  frame_builder.h  parser.cpp  parser.h  protocol_constants.h  serialization.h  unpack.cpp  unpack.h
scripts/: analyze_data.py  build_power_bundles.py  convert_to_utf8bom.sh  run_affinity_benchmark.sh  setup_env.sh  setup_env_noroot.sh  setup_pico_sdk.ps1  test_irq_affinity.sh  test_usb_irq_affinity.sh
sim/: event_loop.cpp  event_loop.h  virtual_link.cpp  virtual_link.h
web_viewer/: ._PATCH_README.md  ._README.md  ._assets  ._colors_and_type.css  ._preview  ._ui_kits  PATCH_README.md  README.md  SKILL.md  apply_design_system.patch  colors_and_type.css  index.html  styles.css  vite.config.js
web_viewer/assets/: README.md
web_viewer/preview/: ._components-meta-status.html  brand-icons.html  brand-logo.html  colors-semantic.html  colors-signals.html  colors-surfaces.html  components-buttons.html  components-gantt-panel.html  components-meta-status.html  components-timeline-panel.html  components-topbar.html  components-track-chips.html  radii-elevation.html  spacing-scale.html  states-hover-focus.html  type-scale.html  type-specimens.html
web_viewer/src/: App.jsx  App.tsx  main.tsx  types.ts
web_viewer/src/chart-core/: bounds.js  bounds.ts  scales.js  scales.ts  ticks.js  ticks.ts
web_viewer/src/components/: GanttPanel.tsx  MetaBar.jsx  MetaBar.tsx  TimelineChart.jsx  TimelineChart.tsx  TopBar.jsx  TopBar.tsx  TrackControl.jsx  TrackControl.tsx
web_viewer/src/constants/: layout.js  layout.ts  tracks.js  tracks.ts
web_viewer/src/dataset/: agent_format_sample.json  combined_test.json  demo_boxr_mh02.json  full_capability_sample.json  latency_test.json  real_boxr_mh02.json  real_pico_demo.json  timespan_test.json
web_viewer/src/domain/: formatters.js  formatters.ts  parsePayload.js  parsePayload.ts  search.ts
(+217 files in other folders)
